--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/financial-portfolio-manager",
+            "outputPath": "dist/portfolio-manager",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -61,10 +61,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "financial-portfolio-manager:build:production"
+              "browserTarget": "portfolio-manager:build:production"
             },
             "development": {
-              "browserTarget": "financial-portfolio-manager:build:development"
+              "browserTarget": "portfolio-manager:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -72,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "financial-portfolio-manager:build"
+            "browserTarget": "portfolio-manager:build"
           }
         },
         "test": {
